@@ -45,6 +45,8 @@ typedef enum nsType_e {
     RPMNS_TYPE_DISKSPACE=  (1 << 19),	/*!< diskspace(/path) */
     RPMNS_TYPE_DIGEST	=  (1 << 20),	/*!< digest(md5:/path) = hex */
     RPMNS_TYPE_GNUPG	=  (1 << 21),	/*!< gnupg(/path/file.asc) */
+    RPMNS_TYPE_MACRO	=  (1 << 22),	/*!< macro(foo) */
+    RPMNS_TYPE_ENVVAR	=  (1 << 23),	/*!< envvar(foo) */
 } nsType;
 
 #if defined(_RPMNS_INTERNAL)
